--- a/app/src/main/res/layout/activity_my_cration.xml
+++ b/app/src/main/res/layout/activity_my_cration.xml
@@ -80,15 +80,9 @@
                 app:layout_constraintTop_toTopOf="parent">
 
 
-                <androidx.cardview.widget.CardView
+                <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="8dp"
-                    android:layout_marginTop="8dp"
-                    android:layout_marginRight="8dp"
-                    android:layout_marginBottom="8dp"
-
-                    app:cardCornerRadius="4dp"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
@@ -101,7 +95,7 @@
                         android:layout_height="wrap_content"
                         app:layout_constraintBottom_toBottomOf="parent" />
 
-                </androidx.cardview.widget.CardView>
+                </LinearLayout>
 
             </androidx.constraintlayout.widget.ConstraintLayout>
 
