--- a/app/src/main/res/layout/ad_unified.xml
+++ b/app/src/main/res/layout/ad_unified.xml
@@ -10,8 +10,19 @@
         android:minHeight="50dp"
         android:orientation="vertical">
 
-        <TextView style="@style/AppTheme.AdAttribution"/>
+     <TextView
+         android:textSize="12sp"
+         android:background="#FFCC66"
+         android:text="@string/ad_attribution"
+         android:layout_marginTop="2dp"
+         android:textColor="@color/white"
+         android:paddingRight="5dp"
+         android:paddingLeft="5dp"
+         android:layout_marginLeft="5dp"
+         android:layout_width="wrap_content"
+         android:layout_height="wrap_content">
 
+     </TextView>
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -25,17 +36,21 @@
                 android:layout_height="wrap_content"
                 android:orientation="horizontal">
 
+
+
                 <ImageView
                     android:id="@+id/ad_app_icon"
                     android:layout_width="40dp"
                     android:layout_height="40dp"
                     android:adjustViewBounds="true"
-                    android:paddingBottom="5dp"
-                    android:paddingEnd="5dp"
-                    android:paddingRight="5dp"/>
+                 />
+
 
                 <LinearLayout
-                    android:layout_width="match_parent"
+                    android:layout_width="0dp"
+                    android:layout_weight="1"
+                    android:layout_marginRight="5dp"
+                    android:layout_marginLeft="5dp"
                     android:layout_height="wrap_content"
                     android:orientation="vertical">
 
@@ -43,9 +58,11 @@
                         android:id="@+id/ad_headline"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:textColor="#0000FF"
-                        android:textSize="16sp"
-                        android:textStyle="bold" />
+                        android:textColor="@color/black"
+                        android:singleLine="true"
+                        android:maxLines="1"
+                        android:ellipsize="end"
+                        android:textSize="16sp" />
 
                     <LinearLayout
                         android:layout_width="match_parent"
@@ -56,6 +73,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="match_parent"
                             android:gravity="bottom"
+                            android:textColor="@color/black"
                             android:textSize="14sp"
                             android:textStyle="bold"/>
 
@@ -67,10 +85,65 @@
                             android:isIndicator="true"
                             android:numStars="5"
                             android:stepSize="0.5" />
+
+
+
                     </LinearLayout>
+
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:background="@drawable/shape_ad"
+                    android:layout_width="100dp"
+                    android:layout_height="35dp"
+                    android:layout_gravity="end"
+                    android:orientation="horizontal"
+                    >
+                    <TextView
+
+                       android:layout_gravity="center"
+                        android:id="@+id/ad_call_to_action"
+                        android:layout_width="match_parent"
+                        android:singleLine="true"
+                        android:textColor="@color/white"
+                        android:layout_height="wrap_content"
+                        android:gravity="center"
+                        android:textSize="12sp" />
 
                 </LinearLayout>
             </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="end"
+                android:orientation="horizontal"
+                >
+
+
+                <TextView
+                    android:id="@+id/ad_price"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:singleLine="true"
+                    android:textColor="@color/black"
+                    android:ellipsize="end"
+                    android:textSize="12sp" />
+
+
+
+                <TextView
+                    android:id="@+id/ad_store"
+                    android:layout_marginLeft="5dp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textColor="@color/black"
+                    android:textSize="12sp" />
+
+
+            </LinearLayout>
+
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -82,6 +155,9 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginRight="20dp"
+                    android:maxLines="2"
+                    android:textColor="@color/black"
+                    android:ellipsize="end"
                     android:layout_marginEnd="20dp"
                     android:textSize="12sp" />
 
@@ -89,44 +165,10 @@
                     android:id="@+id/ad_media"
                     android:layout_gravity="center_horizontal"
                     android:layout_width="250dp"
-                    android:layout_height="175dp"
-                    android:layout_marginTop="5dp" />
+                    android:layout_height="175dp" />
 
-                <LinearLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="end"
-                    android:orientation="horizontal"
-                    android:paddingBottom="10dp"
-                    android:paddingTop="10dp">
 
-                    <TextView
-                        android:id="@+id/ad_price"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:paddingLeft="5dp"
-                        android:paddingStart="5dp"
-                        android:paddingRight="5dp"
-                        android:paddingEnd="5dp"
-                        android:textSize="12sp" />
 
-                    <TextView
-                        android:id="@+id/ad_store"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:paddingLeft="5dp"
-                        android:paddingStart="5dp"
-                        android:paddingRight="5dp"
-                        android:paddingEnd="5dp"
-                        android:textSize="12sp" />
-
-                    <Button
-                        android:id="@+id/ad_call_to_action"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:gravity="center"
-                        android:textSize="12sp" />
-                </LinearLayout>
             </LinearLayout>
         </LinearLayout>
     </LinearLayout>
