--- a/app/src/main/res/layout/activity_preview.xml
+++ b/app/src/main/res/layout/activity_preview.xml
@@ -115,7 +115,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/adloatoyt"
         app:layout_constraintTop_toBottomOf="@+id/iv_exx">
 
         <androidx.constraintlayout.widget.ConstraintLayout
@@ -182,5 +182,14 @@
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 
+    <FrameLayout
+        android:id="@+id/adloatoyt"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent">
+
+    </FrameLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
