--- a/app/src/main/res/layout/row_sticker.xml
+++ b/app/src/main/res/layout/row_sticker.xml
@@ -3,33 +3,33 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="@dimen/_90sdp"
-    xmlns:tools="http://schemas.android.com/tools">
+    android:layout_height="@dimen/_100sdp"
+   >
 
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
 
-        <TextView
-            android:id="@+id/txtEmoji"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:fontFamily="@font/mos_regu"
-            android:textColor="#FFFFFF"
-            android:gravity="center"
-            android:textSize="35sp"
-            app:layout_constraintBottom_toBottomOf="@+id/constraintLayout8"
-            app:layout_constraintTop_toTopOf="parent"
-            tools:android="Burhanuddin" />
+        <ImageView
+            android:id="@+id/imgSticker"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_margin="@dimen/_1sdp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <androidx.constraintlayout.widget.ConstraintLayout
-            android:id="@+id/constraintLayout8"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="@drawable/my_sahpesti"
@@ -43,4 +43,3 @@
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
-
